[project]
name = "course_builder"
version = "0.1.0"
description = "A project for building learning courses."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "youremail@example.com" }]
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.18.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
course-builder = "course_builder.__main__:main"

# Setuptools-specific configuration
[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]
include = ["course_builder*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylint.messages_control]
disable = [
    "redefined-outer-name",
]